# secretstorage

./: .bzrignore  .git-blame-ignore-revs  .gitignore  .readthedocs.yaml  .travis.yml  LICENSE  MANIFEST.in  README  README.rst  changelog  pyproject.toml  setup.cfg  setup.py
.github/workflows/: main.yml
docs/: changelog.rst  collection.rst  conf.py  exceptions.rst  index.rst  item.rst  util.rst
secretstorage/: __init__.py  collection.py  defines.py  dhcrypto.py  exceptions.py  item.py  util.py
tests/: cleanup_test_items.py  run_tests.py  test_collection.py  test_compat_functions.py  test_context_manager.py  test_dhcrypto.py  test_exceptions.py  test_item.py  test_unlocking.py
