[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "SecretStorage"
version = "3.4.0"
description = "Python bindings to FreeDesktop.org Secret Service API"
authors = [{name = "Dmitry Shachnev", email = "mitya57@gmail.com"}]
license = "BSD-3-Clause"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = ["cryptography>=2.0", "jeepney>=0.6"]

[project.readme]
file = "README.rst"
content-type = "text/x-rst"

[project.urls]
Homepage = "https://github.com/mitya57/secretstorage"
Documentation = "https://secretstorage.readthedocs.io/en/latest/"
"Issue Tracker" = "https://github.com/mitya57/secretstorage/issues/"

[tool.setuptools]
packages = ["secretstorage"]
platforms = ["Linux"]
include-package-data = false

[tool.setuptools.package-data]
secretstorage = ["py.typed"]
