[metadata]
name = SecretStorage
version = 3.1.1
description = Python bindings to FreeDesktop.org Secret Service API
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Dmitry Shachnev
author_email = mitya57@gmail.com
url = https://github.com/mitya57/secretstorage
license = BSD 3-Clause License
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: BSD License
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Security
    Topic :: Software Development :: Libraries :: Python Modules
platforms = Linux

[options]
packages = secretstorage
python_requires = >=3.5
install_requires = cryptography; jeepney>=0.4.2
